--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,9 @@ add_executable(${CMAKE_PROJECT_NAME}
         Core/modules/motor/servo_motor/ring_buffer.h
         Core/modules/motor/servo_motor/ring_buffer.c
         Core/modules/motor/servo_motor/servo_motor_uart.c
-        Core/modules/motor/servo_motor/servo_motor_uart.h)
+        Core/modules/motor/servo_motor/servo_motor_uart.h
+        Core/modules/motor/servo_motor/motor_test.h
+        Core/modules/motor/servo_motor/motor_test.c)
 
 # Add STM32CubeMX generated sources
 add_subdirectory(cmake/stm32cubemx)
