--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,9 @@ add_executable(${CMAKE_PROJECT_NAME}
         Core/modules/motor/servo_motor/servo_motor.c
         Core/modules/motor/servo_motor/servo_motor.h
         Core/modules/pid/2006pid.c
-        Core/modules/pid/2006pid.c
+        Core/modules/pid/2006pid.h
+        Core/modules/pid/cascade_pid.c
+        Core/modules/pid/cascade_pid.h
         Middlewares/Third_Party/SEGGER/Config/SEGGER_RTT_Conf.h
         Middlewares/Third_Party/SEGGER/RTT/SEGGER_RTT.h
         Middlewares/Third_Party/SEGGER/RTT/SEGGER_RTT_printf.c
