Extra,英雄摩擦轮发射评测完成。usb初步尝试，cubemx配置完毕，已确认可行性，尝试移植代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,10 @@ add_executable(${CMAKE_PROJECT_NAME}
         Core/modules/imu/BMI088Middleware.c
         Core/modules/imu/BMI088Middleware.h
         Core/modules/imu/BMI088reg.h
+        Core/bsp/sbus/sbus.c
+        Core/bsp/sbus/sbus.h
+        Core/bsp/usb/usb.c
+        Core/bsp/usb/usb.h
 )
 
 # Add STM32CubeMX generated sources
