--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,10 @@ add_executable(${CMAKE_PROJECT_NAME}
         Core/modules/pid/2006pid.h
         Core/modules/pid/cascade_pid.c
         Core/modules/pid/cascade_pid.h
+        Core/modules/mecanum_chassis/mecanum_chassis.c
+        Core/modules/mecanum_chassis/mecanum_chassis.h
+        Core/modules/remote_controller/remote_control.c
+        Core/modules/remote_controller/remote_control.h
         Middlewares/Third_Party/SEGGER/Config/SEGGER_RTT_Conf.h
         Middlewares/Third_Party/SEGGER/RTT/SEGGER_RTT.h
         Middlewares/Third_Party/SEGGER/RTT/SEGGER_RTT_printf.c
@@ -95,6 +99,8 @@ target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
         Core/bsp/usb
         Core/modules/imu
         Core/modules/algorithm
+        Core/modules/mecanum_chassis
+        Core/modules/remote_controller
         Middlewares/Third_Party/SEGGER/RTT
         Middlewares/Third_Party/SEGGER/Config
 )
